<resources>
    <string name="app_name">KeepMoving</string>
    <string name="correo">f.manu_97@hotmail.com</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="intr_correo">Introduzca su correo</string>
    <string name="intr_contraseña">Introduzca su contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="nombre_usuario_perfil_titulo">Nombre:</string>
    <string name="nombre_usuario_perfil">Este es el nombre</string>
    <string name="biografia_usuario_perfil_titulo">Biografia:</string>
    <string name="biografia_usuario_perfil">Aquí va la biografia</string>
    <string name="aficiones_usuario_perfil_titulo">Aficiones:</string>
    <string name="aficiones_usuario_perfil">Aqui van las aficiones</string>
    <string name="modificar">Modificar datos</string>
    <string name="mis_quedadas">Mis quedadas</string>
    <string name="intr_contraseña2">Repita su contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="siguiente">Siguiente</string>
    <string name="intr_nombre">Introduzca su nombre*</string>
    <string name="intr_bio">Introduzca su biografia</string>
    <string name="int_aficiones">Introduzca sus aficiones</string>
    <string name="atras">Atras</string>
    <string name="intr_apellidos">Introduzca los apellidos*</string>
    <string name="correo_usuario_perfil_titulo">Correo:</string>
    <string name="correo_usuario_perfil">Este es el correo</string>
    <string name="title_activity_maps">Map</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="deporte_quedada">¿Que deporte deseas practicar? *</string>
    <string name="intr_descripcion">¿Más información?</string>
    <string name="plazas">Plazas disponibles *</string>
    <string name="publicar">Publicar</string>
    <string name="google_maps_key">AIzaSyCJIH6Xyvnoli1RLhKDcAv66Pi6CjnMi-w</string>
    <string name="fecha_quedada">¿Fecha de la quedada? *</string>
    <string name="hora_quedada">¿Hora de la quedada? *</string>
    <string name="intr_localizacion">¿Donde tendra lugar la quedada? *</string>
    <string name="num_quedadas">Número de quedadas:</string>
    <string name="ubicacion">Ubicación:</string>
    <string name="actividad">Actividad:</string>
    <string name="plazas_quedada">Plazas restantes:</string>
    <string name="fecha_quedada_detalle">Fecha de la quedada:</string>
    <string name="hora_quedada_detalle">Hora de la quedada:</string>
    <string name="deporte_quedada_detalle_us">Deporte o Actividad:</string>
    <string name="masInfo_quedada_detalle_us">Más información:</string>
    <string name="masinfo">Más informacion</string>
    <string name="editar">Editar</string>
    <string name="ubicacion2">ubicación</string>
    <string name="borrar_quedada">Eliminar Quedada</string>
    <string name="editar_quedada">Editar quedada</string>
    <string name="apuntarse">Apúntame!</string>
    <string name="autor_quedada">Autor:</string>
    <string name="guardar">guardar</string>
    <string name="plazas_reserva">¿Cuantas plazas deseas reservar?</string>
    <string name="enviar">Enviar Solicitud</string>
    <string name="mis_peticiones">Mis peticiones:</string>
    <string name="estado">Estado:</string>
    <string name="mis_peticiones_recibidas">Peticiones recibidas:</string>
    <string name="confirmar">Confirmar</string>
    <string name="rechazar">Rechazar</string>
    <string name="plazas_solicitadas">Plazas solicitadas:</string>
    <string name="plazas_iniciales_quedada">Plazas iniciales:</string>
    <string name="nombre_autor">Autor de la Petición:</string>
    <string name="verPerfil">Ver Perfil</string>
    <string name="alerta_contraseña">La contraseña debe tener entre 6 y 30 caracteres</string>
    <string name="Enviar_Email">Enviar email</string>
    <string name="msg_cambioContraseña">Este botón enviará un email a su correo electronico para que pueda cambiar su contraseña</string>
    <string name="olvidoContraseña">¿Has olvidado tu contraseña?</string>
    <string name="plazas2">plazas</string>
    <string name="loggin_texto_2">¿Aún no te has registrado?</string>
    <string name="lema_app">\"Matando el aburrimiento..\"</string>
</resources>
