<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fermach.keepmoving.MainActivity.MainActivity"
    android:weightSum="1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rel_layout"
            xmlns:android="http://schemas.android.com/apk/res/android"
            >

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map_detalle_general"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:layout_margin="5sp"
                tools:context="com.example.fermach.keepmoving.MapsActivity" />


        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="6sp"
            android:layout_weight="1"
            android:hint="@string/ubicacion"
            android:textColorHint="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_weight="1"
            android:layout_marginTop="6sp"
            android:id="@+id/lugar_detalle_quedada_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:hint="@string/ubicacion2"
            android:textColorHint="@android:color/black"
            android:textSize="15sp"
            />

    </LinearLayout>
    <View
        android:layout_marginTop="6sp"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12sp"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/fecha_quedada_detalle"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_fecha_detalle_quedada_general"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:layout_marginTop="5sp"
                android:hint="@string/fecha"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="8sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_weight="1"
                android:text="@string/hora_quedada_detalle"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/text_hora_detalle_quedada_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginLeft="8sp"
                android:layout_weight="1"
                android:hint="@string/hora"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16sp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22sp"
        android:layout_marginTop="18sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:text="@string/deporte_quedada_detalle_us"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_deporte_detalle_quedada_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="8sp"
            android:layout_weight="1"
            android:hint="@string/actividad"
            android:textSize="15sp"/>


        <TextView
            android:layout_marginTop="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:text="@string/masInfo_quedada_detalle_us"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_masinfo_detalle_quedada_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="8sp"
            android:layout_weight="1"
            android:hint="@string/masinfo"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="618dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8sp"
                android:layout_weight="2"
                android:text="@string/plazas_quedada"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_plazas_detalle_quedada_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="0"
                android:textSize="15sp"/>


        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18sp"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35sp"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancelar_detalle_quedada_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="22sp"
            android:layout_weight="1"
            android:elevation="10sp"
            android:textSize="15sp"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btn_apuntarse_detalle_quedada_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22sp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:elevation="10sp"
            android:text="@string/apuntarse" />


    </LinearLayout>

</LinearLayout>