<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="115sp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30sp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginLeft="13sp"
            android:layout_marginRight="17sp"
            android:textColorHint="@android:color/black"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editText_cambioContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/intr_correo"
                android:inputType="text"
                android:maxLength="35"
                android:textColorHint="@android:color/black"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancelar_canbioContraseña"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:elevation="10sp"
            android:text="@string/cancelar" />
        <Button
            android:id="@+id/btn_cambioContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginLeft="5sp"
            android:layout_weight="1"
            android:elevation="10sp"
            android:text="@string/Enviar_Email" />



        </LinearLayout>

        <TextView
            android:layout_marginHorizontal="22sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/msg_cambioContraseña"
            android:textSize="15sp" />





</LinearLayout>