<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fermach.keepmoving.MainActivity.MainActivity"
    android:weightSum="1"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140sp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fab_usuarioImagen_registro"
            android:layout_margin="16sp"
            android:layout_width="match_parent"
            android:src="@drawable/user"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:civ_border_color="@android:color/black"
            app:civ_border_width="1sp"
            android:elevation="10sp"
            />


    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="289dp"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="25sp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="13sp"
            android:layout_marginRight="17sp"
            android:textColorHint="@android:color/black"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editText_nombreUsuario_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/intr_nombre"
                android:inputType="text"
                android:textColorHint="@android:color/black"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="13sp"
            android:layout_marginRight="17sp"
            android:textColorHint="@android:color/black"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editText_apellidosUsuario_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/intr_apellidos"
                android:inputType="text"
                android:textColorHint="@android:color/black"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <MultiAutoCompleteTextView
            android:id="@+id/multiAutoComplete_aficiones_registro"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="13sp"
            android:layout_marginRight="17sp"
            android:hint="@string/int_aficiones"
            android:textColorHint="@android:color/black"
            android:textSize="15sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13sp"
            android:layout_marginRight="17sp"
            android:textColorHint="@android:color/black"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editText_biografiaUsuario_registro1"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:hint="@string/intr_bio"
                android:inputType="text"
                android:textColorHint="@android:color/black"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35sp"
        android:layout_marginTop="40sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_atras_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="19sp"
            android:layout_weight="1"
            android:elevation="10sp"
            android:text="@string/atras" />

        <Button
            android:id="@+id/btn_registrar_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19sp"
            android:layout_weight="1"
            android:elevation="10sp"
            android:text="@string/registrarse" />
    </LinearLayout>

</LinearLayout>